<resources>
	<string name="app_operations_title">Configurable background location polling and storage</string>
	<string name="app_configure_title">Configure</string>
	<string name="app_other_title">Other</string>
	<string name="appEnabled_key">appEnabled</string>
	<string name="appEnabled_title">Enable Backitude</string>
	<string name="appEnabled_summary">Background service is disabled</string>
	<string name="settings_key">settings</string>
	<string name="settings_title">Settings</string>
	<string name="settings_summary">Edit application preferences</string>
	<string name="account_prefs_key">accountName</string>
	<string name="account_prefs_title">Google Account</string>
	<string name="account_prefs_summary">No current Google user is saved</string>
	<string name="advanced_settings_key">advanced_settings</string>
	<string name="advanced_settings_title">Advanced Settings</string>
	<string name="advanced_settings_summary">Edit Android Location / Wi-Fi settings, Resource priority setting, Wake lock settings</string>
	<string name="extras_key">extras</string>
	<string name="extras_title">Extras</string>
	<string name="extras_summary">Fire Updates, Manual Sync, View History Details</string>
	<string name="fire_key">runNow</string>
	<string name="fire_title">Fire Update</string>
	<string name="fire_summary">Perform a one-time location poll</string>
	<string name="send_fire_key">send_fire</string>
	<string name="send_fire_title">Fire Update on a Friend</string>
	<string name="send_fire_summary">Send a fire update request to a friend via SMS message</string>
	<string name="send_last_update_key">send_last_update</string>
	<string name="send_last_update_title">Share Your Location</string>
	<string name="send_last_update_summary">Send a Maps link of your last updated location to a friend</string>
	<string name="lastUpdate_key">lastUpdate</string>
	<string name="lastUpdate_title">View Most Recent Location</string>
	<string name="lastUpdate_summary">Display details of the most recent location polled</string>
	<string name="lastError_key">lastError</string>
	<string name="lastError_title">View Error History</string>
	<string name="lastError_summary">Display details of the last errors thrown by application</string>
	<string name="lastPush_key">lastPush</string>
	<string name="lastPush_title">View Push Update History</string>
	<string name="lastPush_summary">Display details of the most recent update requests</string>
	<string name="faq_key">faq</string>
	<string name="faq_title">FAQ</string>
	<string name="faq_summary">Frequently Asked Questions</string>
	<string name="donateTo_key">donateTo</string>
	<string name="donateTo_title">Donate to Developer</string>
	<string name="about_key">about</string>
	<string name="about_title">About Backitude</string>
	<string name="category_polling">Location Polling Options</string>
	<string name="category_update">Updating Options</string>
	<string name="category_output">Output Options</string>
	<string name="category_additional">Additional Settings</string>
	<string name="category_offlineSync_settings">Off-line Location Storage and Sync Settings</string>
	<string name="category_update_extras">Update Functions</string>
	<string name="category_offlineSync_extras">Offline Storage and Sync Functions</string>
	<string name="category_server_settings">Custom Server Settings</string>
	<string name="category_server_parameters">Request Parameter Values</string>
	<string name="category_server_keys">Request Parameter Keys</string>
	<string name="category_view_extras">View History Details</string>
	<string name="polling_settings_key">polling_settings</string>
	<string name="polling_settings_title">Standard Mode Settings</string>
	<string name="polling_settings_summary">Edit polling preferences for standard background application behavior</string>
	<string name="update_settings_key">update_settings</string>
	<string name="update_settings_title">Update Settings</string>
	<string name="update_settings_summary">Edit general update preferences for application</string>
	<string name="accuracy_settings_key">accuracy_settings</string>
	<string name="accuracy_settings_title">Accuracy Settings</string>
	<string name="accuracy_settings_summary">Edit accuracy preferences</string>
	<string name="realtime_settings_key">realtime_settings</string>
	<string name="realtime_settings_title">Docked Mode Settings</string>
	<string name="realtime_settings_summary">Edit polling preferences for application behavior while plugged into a power supply</string>
	<string name="wifi_mode_settings_key">wifi_mode_settings</string>
	<string name="wifi_mode_settings_title">Wi-Fi Mode Settings</string>
	<string name="wifi_mode_settings_summary">Edit polling preferences for application behavior while connected to a Wi-Fi network.</string>
	<string name="push_settings_key">push_settings</string>
	<string name="push_settings_title">Push Update Settings</string>
	<string name="push_settings_summary">Edit preferences for receiving "Fire Update" requests from others via SMS</string>
	<string name="statusBar_key">statusBar</string>
	<string name="statusBar_title">Status Bar Icon</string>
	<string name="statusBar_summary">Show a status bar icon in the notification area</string>
	<string name="statusBar_default">2</string>
	<string name="display_error_key">display_error</string>
	<string name="display_error_title">Display Failure Notifications</string>
	<string name="display_error_text">Display a notification bar message when the application fails on a request.</string>
	<string name="offline_settings_key">offline_settings</string>
	<string name="offline_settings_title">Offline Storage Settings</string>
	<string name="offline_settings_summary">Edit offline storage preferences</string>
	<string name="offlineSync_enabled_key">offline_sync</string>
	<string name="offlineSync_enabled_title">Offline Storage Enabled</string>
	<string name="offlineSync_enabled_summary">Store location values on device if data network service is not available at the time of discovery.  Values can be exported or shared at a later time once connected.</string>
	<string name="offlineSync_syncOptions_key">syncOptions</string>
	<string name="offlineSync_syncOptions_title">Sync Options</string>
	<string name="offlineSync_syncOptions_summary">Select when the application will sync offline location records that have been stored on the device</string>
	<string name="offlineSync_syncOptions_default">3</string>
	<string name="offlineSync_toast_key">offlineSync_toast</string>
	<string name="offlineSync_toast_title">Display Sync Message</string>
	<string name="offlineSync_toast_text">After completing offline sync, a message is briefly displayed on the screen indicating success or failure.</string>
	<string name="offlineSync_delete_key">offlineSync_delete</string>
	<string name="offlineSync_delete_title">Clear Records after Sync</string>
	<string name="offlineSync_delete_text">Any stored records that have been successfully posted, will be removed from the local database.</string>
	<string name="offlineSync_sync_key">manual_offline_sync</string>
	<string name="offlineSync_sync_title">Sync Offline data</string>
	<string name="offlineSync_sync_summary">Sends offline location values to customizable server URL for Location History.  Stored values are automatically cleared upon successful transmission or export.</string>
	<string name="offlineSync_clear_key">clear_offline_history</string>
	<string name="offlineSync_clear_title">Clear Offline data</string>
	<string name="offlineSync_clear_summary">Deletes the offline location values in storage.</string>
	<string name="export_key">export</string>
	<string name="export_title">Internal Memory Storage Options</string>
	<string name="export_summary">Location values can be stored locally on the device in many different forms</string>
	<string name="export_default">1</string>
	<string name="test_connection_key">runNow</string>
	<string name="test_connection_title">Run Test</string>
	<string name="test_connection_summary">Poll the current location and send a request to the custom server to test the settings</string>
	<string name="server_settings_key">server_settings</string>
	<string name="server_settings_title">Custom Server Settings</string>
	<string name="server_settings_summary">Edit custom server preferences</string>
	<string name="server_url_key">server_url</string>
	<string name="server_url_title">Server URL</string>
	<string name="server_url_summary">Configure a custom server to send location data to on the fly.</string>
	<string name="server_url_default">http://</string>
	<string name="authentication_key">authentication</string>
	<string name="authentication_title">Authentication Options</string>
	<string name="authentication_summary">Choose which type of http post authentication method you would like to use for Custom Server POSTs</string>
	<string name="authentication_default">1</string>
	<string name="server_user_name_key">server_user_name</string>
	<string name="server_user_name_title">User Name</string>
	<string name="server_user_name_summary">User name for authentication with server (may not be required)</string>
	<string name="server_password_key">server_password</string>
	<string name="server_password_title">Password</string>
	<string name="server_password_summary">Password for authentication with server (may not be required)</string>
	<string name="server_uid_key">server_uid</string>
	<string name="server_uid_title">Device ID</string>
	<string name="server_uid_summary">ID to distinguish device and user amongst other requests sent to server using the same authentication (may not be required)</string>
	<string name="server_key_username_key">server_key_username</string>
	<string name="server_key_username_title">User Name</string>
	<string name="server_key_username_default">username</string>
	<string name="server_key_password_key">server_key_password</string>
	<string name="server_key_password_title">Password</string>
	<string name="server_key_password_default">password</string>
	<string name="server_key_latitude_key">server_key_latitude</string>
	<string name="server_key_latitude_title">Latitude</string>
	<string name="server_key_latitude_default">latitude</string>
	<string name="server_key_longitude_key">server_key_longitude</string>
	<string name="server_key_longitude_title">Longitude</string>
	<string name="server_key_longitude_default">longitude</string>
	<string name="server_key_loc_timestamp_key">server_key_loc_timestamp</string>
	<string name="server_key_loc_timestamp_title">Location Timestamp (UTC)</string>
	<string name="server_key_loc_timestamp_default">utc_timestamp</string>
	<string name="server_key_req_timestamp_key">server_key_req_timestamp</string>
	<string name="server_key_req_timestamp_title">Request Timestamp (UTC)</string>
	<string name="server_key_req_timestamp_default">req_timestamp</string>
	<string name="server_key_accuracy_key">server_key_accuracy</string>
	<string name="server_key_accuracy_title">Accuracy</string>
	<string name="server_key_accuracy_default"></string>
	<string name="server_key_speed_key">server_key_speed</string>
	<string name="server_key_speed_title">Speed</string>
	<string name="server_key_speed_default"></string>
	<string name="server_key_altitude_key">server_key_altitude</string>
	<string name="server_key_altitude_title">Altitude</string>
	<string name="server_key_altitude_default"></string>
	<string name="server_key_bearing_key">server_key_bearing</string>
	<string name="server_key_bearing_title">Direction Bearing</string>
	<string name="server_key_bearing_default"></string>
	<string name="server_key_uid_key">server_key_uid</string>
	<string name="server_key_uid_title">Device ID</string>
	<string name="server_key_uid_default"></string>
	<string name="server_key_account_key">server_key_account</string>
	<string name="server_key_account_title">Google Account</string>
	<string name="server_key_account_default"></string>
</resources>